--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.0.0
   flutter_native_splash: ^2.3.2
+  flutter_svg: ^2.0.7
+  flutter_screenutil: ^5.9.0
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
