--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_native_splash: ^2.3.2
   flutter_svg: ^2.0.7
   flutter_screenutil: ^5.9.0
+  provider: ^6.0.5
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
